# gpt-cli

./: .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  shell.nix
chatgpt_cli/: abstract.py  chat.py  config.py  constants.py  history.py  instruct.py  key.py  main.py  pretty.py  prompt.py  role.py
gpt_cli/: chat.py  context.py  key.py  main.py  message.py  model.py  pretty.py  prompt.py
src/gpt_cli/: __main__.py  chat.py  constants.py  context.py  main.py  model.py  prompt.py  tokens.py
tests/: conftest.py  test_context.py  test_history.py  test_message.py  test_model.py  test_tokens.py
tests/assets/: context_w_system.yaml  context_wo_system.yaml
tests/assets.bak/: history_w_system.txt  history_wo_system.txt
