[tool.poetry]
name = "gpt-cli"
version = "0.2.2"
description = "CLI for OpenAI ChatGPT and instruct models."
authors = ["Nick To <nick@nickto.net>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gpt_cli" }]

[tool.poetry.scripts]
gpt-cli = "gpt_cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
typer = { version = "^0.7.0", extras = ["all"] }
tiktoken = "^0.3.2"
pydantic = "^2.1.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
rope = "^1.7.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
