[project]
name = "gpt-cli"
version = "1.3.1"
description = "CLI for OpenAI ChatGPT and instruct models."
readme = "README.md"
authors = [
  { name = "Nick To", email = "nick@nickto.net" }
]
requires-python = ">=3.11"
dependencies = [
  "openai >= 0.27.2,<1",
  "typer >= 0.12.5,<1",
  "tiktoken >= 0.7.0,<1",
  "pydantic >= 2.1.1,<3",
  "pyyaml >= 6.0.1,<7",
  "prompt-toolkit >= 3.0.43,<4",
]

[project.scripts]
gpt-cli = "gpt_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
